# bgc_data_portal

./: .dockerignore  .gitignore  CANVAS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  skaffold.yaml
.claude/: settings.local.json
.claude/commands/: sandbox-test.md  sandbox-up.md
.devcontainer/: .env.devcontainer  Dockerfile.devcontainer  devcontainer.json  docker-compose.devcontainer.yml  init-workspace.sh
.github/workflows/: release.yml
api/: aggregate_bgcs.py  api.py  api_new.py  filters.py  forms.py  generate_outputs.py  models.py  schemas.py  services.py  utils.py
api/management/commands/: gather_latest_stats.py
api/migrations/: 0001_initial.py  0002_currentstats.py
bgc_data_portal/: __init__.py  asgi.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
bgc_data_portal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bgc_data_portal/templates/: .results_page2.html  404.html  about.html  base.html  bgc_page.html  explore_page.html  explore_table.html  index.html  landing_page.html  results_page.html
bgc_data_portal/templates/bgc_plots/: plot.html
bgc_plots/: README.md  apps.py  class_distribution_plots.py  contig_region_visualisation.py  dash_app.py  pfam_annots.py  urls.py  views.py
bgc_plots/data/: pfam2goSlim.json  pfam_desc.json
bgc_plots/templates/bgc_plots/: graph.html  plot.html
bgc_portal/: apps.py
db/: Dockerfile
deployments/k8s-dev/: ebi-wp-k8s-hl.yaml
deployments/k8s-local/manifests/: 02-postgres-statefulset.yaml  05-django-deployment.yaml  06-celery-deployment.yaml  (+1 more)
deployments/k8s-prod/: ebi-wp-k8s-hl.yaml  secrets-template.yaml
django/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.workspace  README.md  requirements-dev.txt  requirements-ml.txt  requirements-web.txt  requirements.txt  setup.py
django/bgc_data_portal/: api.py  celery.py  forms.py  settings.py  urls.py  views.py
django/discovery/: admin.py  api.py  api_schemas.py  cache_utils.py  models.py  querysets.py  tasks.py
django/docs/: _quarto.yml  about.qmd  api-documentation.qmd  bgc-details.qmd  explore-bgcs.qmd  index.qmd  intro.qmd  landing-page-features.qmd  ripp-glycosyltransferase-toxin-antitoxin.ipynb
django/frontend/: index.html
django/mgnify_bgcs/: cache_utils.py  filters.py  models.py  searches.py  tasks.py
django/staticfiles/: main.js.map
django/tests/: conftest.py
docs/: _quarto.yml  about.qmd  api-documentation.qmd  discovery-data-spec.md  getting-started.qmd  index.qmd
docs/_site/: about.html  api-documentation.html  api.html  getting-started.html  index.html  search.json
docs/runbooks/: k8s-dev-deployment.md  k8s-prod-deployment.md  local-dev-setup.md  rollout-2026-05-14-ibgc-dashboard.md  rollout-2026-05-14-nrb-dashboard.md
docs/using-portal/: bgc-details.qmd  explore-bgcs.qmd  landing-page-features.qmd
k8s/: Dockerfile  ebi-wp-k8s-hl.yaml
sandbox/: .env.sandbox  docker-compose.sandbox.yml  sandbox.sh
scripts/: activate  refresh_go_slim_map.py  seed-real-data.sh  workspace.sh
static/css/: styles.css
static/js/: scripts.js
staticfiles/css/: styles.css
staticfiles/js/: scripts.js
(+333 files in other folders)
