[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "bgc-data-portal"
dynamic = ["version"]
requires-python = ">=3.12"
# Runtime dependencies are managed in django/requirements.txt.
# Dev-only dependencies are in django/requirements-dev.txt.
# See django/requirements-web.txt for the fast dev image subset.

[project.optional-dependencies]
dev = [
    "Django==5.0.4",
    "pytest>=7",
    "pytest-django>=4.5",
    "playwright>=1.40",
    "pytest-playwright>=0.4",
    "requests",
    "factory-boy>=3.3",
    "faker>=25",
    "pytest-factoryboy>=2.7",
    # goatools is only needed to regenerate discovery/services/data/go_slim_map.json
    # via `manage.py refresh_go_slim_map`; runtime reads the prebuilt JSON.
    "goatools>=1.4",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["django/migrations", "django/staticfiles"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = "migrations"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bgc_data_portal.settings"
pythonpath = ["django"]
testpaths = ["django/tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["migrations/"]
